--- a/webfiles/css/Upload.css
+++ b/webfiles/css/Upload.css
@@ -10,6 +10,27 @@ h3 i {
     opacity: 1;
 }
 
+.upload-page-content-container {
+    background-color: #f2f2f2;
+    width: auto;
+    margin-top: 30px;
+    overflow: auto;
+    border-radius: 20px;
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
+
+.upload-page-hash-title {
+    /*background-color: #f2f2f2;*/
+    /*width: auto;*/
+    /*margin-top: 30px;*/
+    text-align: center;
+    /*overflow: auto;*/
+    /*border-radius: 20px;*/
+    /*margin-left: 25vw;*/
+    /*margin-right: 25vw;*/
+}
+
 .upload-page-hash {
     background-color: #f2f2f2;
     width: auto;
@@ -19,6 +40,16 @@ h3 i {
     border-radius: 20px;
     margin-left: 25vw;
     margin-right: 25vw;
+    /*text-align: justify;*/
+    /*text-justify: inter-word;*/
+    /*border-spacing: 5px;*/
+}
+
+.upload-page-content {
+    text-align: justify;
+    text-justify: inter-word;
+    border-spacing: 5px;
+    overflow-x: hidden;
 }
 
 .upload-page-buttons {
@@ -36,4 +67,8 @@ h3 i {
     100% {
         opacity: 1;
     }
+}
+
+.bold-text {
+    font-weight: bold;
 }
